# rico8

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: RICO-8.sh  build-example-carts.sh  build-handheld.sh  build-index.sh
.github/workflows/: build-player.yml  ci.yml  deploy-examples.yml
airwolf/: airwolf.lua  airwolf.p8  airwolf.rico8  bullet.lua  bullet.rico8  consts.lua  consts.rico8  enemy_aircraft.lua  enemy_aircraft.rico8  entities.lua  entities.rico8  entity.lua  entity.rico8  explosion.lua  explosion.rico8  rotor.lua  rotor.rico8  scene.lua  scene.rico8  shooter.lua  shooter.rico8  smap.lua  smap.rico8  the_lady.lua  the_lady.rico8  update_result.lua  update_result.rico8
crates/rico8/: Cargo.toml
crates/rico8-cli/: Cargo.toml
crates/rico8-cli/src/: main.rs  ui.rs
crates/rico8-cli/src/editor/: music.rs  sfx.rs
crates/rico8-runtime/examples/: gen_example_assets.rs
crates/rico8-runtime/src/: audio.rs  cart.rs  lib.rs  palette.rs  ui.rs
docs/: ABI.md  ARCHITECTURE.md  CART_FORMAT.md  CLIPBOARD_FORMAT.md  HANDHELD.md  LIMITS.md  LIMITS_TESTING.md  PICO8_IMPORT.md  WEB_EXPORT.md
docs/superpowers/: zigzag_repro.rs
docs/superpowers/plans/: 2026-06-15-sfx-music-editor-rework.md  2026-06-16-map-editor-rework.md
docs/superpowers/specs/: 2026-06-15-sfx-music-editor-rework-design.md  2026-06-16-map-editor-rework-design.md
examples/: collectibles.rico8  game.lua  game.p8  game.rico8  player.rico8
examples/.cargo/: config.toml
examples/hello/: Cargo.toml  assets.rico8
examples/hello/src/: lib.rs
examples/hello_nostd/: Cargo.toml
examples/hello_nostd/src/: lib.rs
examples/map_demo/: Cargo.toml  assets.rico8
examples/map_demo/src/: lib.rs
examples/music_demo/: Cargo.toml  assets.rico8
examples/music_demo/.cargo/: config.toml
examples/music_demo/src/: lib.rs
examples/platformer/: Cargo.toml  assets.rico8
examples/platformer/.cargo/: config.toml
examples/platformer/src/: badie.rs  constants.rs  game_mode.rs  hero.rs  lib.rs  taken.rs
examples/sfx_demo/: Cargo.toml  assets.rico8
examples/sfx_demo/.cargo/: config.toml
examples/sfx_demo/src/: lib.rs
examples/sprite_move/: Cargo.toml  assets.rico8
examples/sprite_move/src/: lib.rs
examples/stress/: Cargo.toml  assets.rico8
examples/stress/src/: lib.rs
lib/: pico8.rico8
rico8/: Cargo.toml
rico8-console/: Cargo.toml
rico8-console/src/: builder.rs  clipboard.rs  gpu.rs  main.rs  shell.rs  ui.rs  watch.rs  webexport.rs
rico8-console/src/editor/: code.rs  file_picker.rs  history.rs  map.rs  mod.rs  music.rs  sfx.rs  sprite.rs
rico8-player/: Cargo.toml
rico8-player/src/: app.rs  main.rs  picker.rs  platform.rs
rico8-player/src/platform/: alsa.rs  blit.rs  evdev.rs  kms.rs  null.rs  window.rs
rico8-runtime/: Cargo.toml
rico8-runtime/examples/: gen_example_assets.rs  render_audio.rs
rico8-runtime/src/: assets.rs  audio.rs  cart.rs  clipboard.rs  fb.rs  font.rs  input.rs  lib.rs  pico8.rs  project.rs  ui.rs  vm.rs
rico8-runtime/src/pico8/: clipboard.rs
rico8-runtime/tests/: subpixel_snapping.rs
rico8-web/: Cargo.toml
rico8-web/src/: lib.rs
rico8/src/: dim.rs  ffi.rs  flags.rs  fmt.rs  glue.rs  lib.rs  memstat.rs  motion.rs  music.rs
rico8/src/console/: main.rs  shell.rs
rico8/src/console/editor/: code.rs  mod.rs  sprite.rs
rico8/tests/: glob_import.rs
src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  module_loader.rs  parser.rs
tests/: basic_tests.rs  direction_enum_test.rs  enum_test.rs  enum_trait_test.rs  integration_tests.rs  lexer_tests.rs  lua_validation_test.rs
