[workspace]
resolver = "2"
members = [
    "rico8",
    "rico8-console",
    "rico8-web",
    "rico8-runtime",
]
# Example carts are standalone crates built for wasm32-unknown-unknown,
# either from inside RICO-8 or with `cargo build --target wasm32-unknown-unknown`.
exclude = ["examples"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zeenix/rico8"

[workspace.dependencies]
rico8-runtime = { path = "rico8-runtime", default-features = false }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
# Only the std serializer; the default heapless integration goes unused.
postcard = { version = "1", default-features = false, features = ["use-std"] }
# No `wat`: carts are always binary wasm (text format is test-only).
wasmi = { version = "0.51", default-features = false, features = ["std"] }
winit = "0.30"
# Default minus `webgpu`: that backend only exists for wasm targets,
# and the console never compiles to wasm (the web player uses no GPU).
wgpu = { version = "29", default-features = false, features = [
    "std",
    "parking_lot",
    "wgsl",
    "vulkan",
    "gles",
    "dx12",
    "metal",
] }
cpal = "0.18"
crc32fast = "1"
miniz_oxide = "0.9"
pollster = "0.4"

[profile.release]
opt-level = 3

# Size-optimized profile for the browser player (`export-web`).
[profile.web-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
