[package]
name = "rico8-player"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RICO-8 cart player for handhelds and the couch: KMS/evdev/ALSA backend over the console runtime"

# Pure-Rust KMS/evdev/ALSA backend; no SDL required. Targets musl-linked
# static binaries for handhelds (ArkOS/ROCKNIX) as well as desktop couch play.
[dependencies]
rico8-runtime.workspace = true
anyhow.workspace = true
evdev = "0.13.2"
