[package]
name = "rico8-player"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RICO-8 cart player for handhelds and the couch: KMS/evdev/ALSA backend over the console runtime"

# Pure-Rust KMS/evdev/ALSA backend; no SDL required. Targets musl-linked
# static binaries for handhelds (ArkOS/ROCKNIX) as well as desktop couch play.
[features]
default = ["kms"]
# Static-musl handheld backend: DRM/KMS video, evdev input, raw-ioctl ALSA. No GL, no SDL.
kms = ["dep:drm", "dep:evdev", "dep:nix", "dep:bytemuck"]

[dependencies]
rico8-runtime.workspace = true
anyhow.workspace = true
evdev = { version = "0.13.2", optional = true }
nix = { version = "0.31.3", features = ["ioctl", "poll"], optional = true }
drm = { version = "0.15.0", optional = true }
bytemuck = { version = "1.25.0", optional = true }
