[package]
name = "rico8"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RICO-8, a PICO-8-like fantasy console for Rust games: the cart SDK, and (with the `console` feature) the console itself"

# One name, two faces:
#  - the library is the SDK carts depend on (zero deps by default, so
#    game builds for wasm32-unknown-unknown stay lean), and
#  - the binary is the console, available behind the `console` feature.

[lib]
name = "rico8"

[[bin]]
name = "rico8"
path = "src/console/main.rs"
required-features = ["console"]

[features]
default = []
# The full console: window, editors, runtime and audio output.
console = ["console-core", "audio"]
# The console without audio output (no ALSA headers needed).
console-core = [
    "dep:rico8-runtime",
    "dep:anyhow",
    "dep:winit",
    "dep:wgpu",
    "dep:pollster",
]
audio = ["console-core", "rico8-runtime/audio"]

[dependencies]
rico8-runtime = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
