[package]
name = "rico8"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RICO-8 fantasy console SDK: write carts in Rust, compile to wasm32-unknown-unknown"

# Deliberately dependency-free: game carts build for
# wasm32-unknown-unknown against this crate and nothing else.
[dependencies]
