[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rico8 = { path = "../../crates/rico8" }

# Standalone workspace: example carts build independently of the
# rico8 workspace, exactly like projects created with `new`.
[workspace]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
